--- a/fodbold_kalender/Tysk fodboldkort.qmd
+++ b/fodbold_kalender/Tysk fodboldkort.qmd
@@ -38,7 +38,16 @@ tyskland_geo_json <- st_read("https://raw.githubusercontent.com/isellsoap/deutsc
 
 
 ## finder byer
-tyske_byer_geo <- readRDS(here("fodbold_kalender", "data", "tyske_byer.Rds"))
+tyske_byer_geo <- readRDS(here("fodbold_kalender", "data", "tyske_byer.Rds")) %>% 
+  mutate(name = case_match(name,
+                           "München" ~ "Munich",
+                           "Freiburg im Breisgau" ~ "Freiburg",
+                           "Frankfurt am Main" ~ "Frankfurt",
+                           "Köln" ~ "Cologne",
+                           "Münster" ~ "Munster",
+                           "Nürnberg" ~ "Nuremberg",
+                           "Mönchengladbach" ~ "Monchengladbach",
+                           .default = name))
 
 tyske_byer_geo_filter <- tyske_byer_geo %>% 
   semi_join(kampprogram_tyskland, by = c("name" = "spilleby")) %>% 
@@ -63,10 +72,14 @@ manglende_geo <- kampprogram_geo %>%
   distinct(spilleby) %>% 
   pull()
 
+manglende_stadions <- kampprogram_geo %>% 
+  filter(is.na(longitude) | is.na(latitude)) %>% 
+  distinct(stadion) %>% 
+  pull()
 
 ```
 
-`r if (kampprogram_klar && !is_empty(manglende_geo)){paste0("Der er spillebyer, hvor der ikke er geo-data. Det drejer sig om: ", manglende_geo)}`
+`r if (kampprogram_klar && !is_empty(manglende_geo)){paste0("Der er spillebyer, hvor der ikke er geo-data. Det drejer sig om: ", paste(manglende_geo, collapse = ", "), ". Det drejer sig om stadionnavnene: ", paste(manglende_stadions, collapse = ", "))}`
 
 
 ```{r}
