--- a/fodbold_kalender/Tysk fodboldkort_amateur.qmd
+++ b/fodbold_kalender/Tysk fodboldkort_amateur.qmd
@@ -69,10 +69,14 @@ manglende_geo <- kampprogram_geo %>%
   distinct(spilleby) %>% 
   pull()
 
+manglende_stadions <- kampprogram_geo %>% 
+  filter(is.na(longitude) | is.na(latitude)) %>% 
+  distinct(stadion) %>% 
+  pull()
 
 ```
 
-`r if (kampprogram_klar && !is_empty(manglende_geo)){cat("Der er spillebyer, hvor der ikke er geo-data. Det drejer sig om:", paste(manglende_geo, collapse = ", "))}`
+`r if (kampprogram_klar && !is_empty(manglende_geo)){paste0("Der er spillebyer, hvor der ikke er geo-data. Det drejer sig om: ", paste(manglende_geo, collapse = ", "), ". Det drejer sig om stadionnavnene: ", paste(manglende_stadions, collapse = ", "))}`
 
 
 ```{r}
